# telegram-multimodal-agent

./: README.md  pyproject.toml
.github/workflows/: deploy_aws_lambda.yaml
src/telegram_agent_aws/: config.py  run_local.py
src/telegram_agent_aws/application/conversation_service/: generate_response.py
src/telegram_agent_aws/application/conversation_service/workflow/: edges.py  graph.py  nodes.py  state.py  tools.py
src/telegram_agent_aws/application/rag_indexing_service/: index_documents.py
src/telegram_agent_aws/domain/: prompts.py
src/telegram_agent_aws/infrastructure/: lambda_function.py  opik_utils.py
src/telegram_agent_aws/infrastructure/clients/: elevenlabs.py  mongodb.py  openai.py  qdrant.py
src/telegram_agent_aws/infrastructure/telegram/: handlers.py
