[project]
name = "ai-project-try"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.26.1",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "langgraph-prebuilt>=1.0.5",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.4.1",
    "python-telegram-bot>=22.5",
]
